# Data_Consultant

./: README.md
research_analyst/: README.md  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_requirements.txt
research_analyst/research_analyst/Reports/: Dialog_Finance_2025-09-13_16-15-35.md  Dialog_Finance_2025-09-13_18-02-05.md  Dialog_Finance_2025-09-13_18-39-54.md  report.md
research_analyst/src/research_analyst/: crew.py  main.py
research_analyst/src/research_analyst/config/: agents.yaml  tasks.yaml
