[project]
name = "research_analyst"
version = "0.1.0"
description = "research-analyst using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
]

[project.scripts]
research_analyst = "research_analyst.main:run"
run_crew = "research_analyst.main:run"
train = "research_analyst.main:train"
replay = "research_analyst.main:replay"
test = "research_analyst.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
